--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday wishes</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <audio autoplay loop>
-        <source src="bd.mp3" type="audio/mpeg">
-        </audio> -->
+    <audio autoplay loop>
+        <source src="music/bd.mp3" type="audio/mpeg">
+    </audio>
     <div class="abc">
     <div class="slideshow-container">
         <div class="mySlides fade">
